--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Core"]
 	path = Core
 	url = https://github.com/CrossCraft/CC-CoreR.git
+[submodule "ext/SDC"]
+	path = ext/SDC
+	url = https://github.com/Iridescence-Technologies/Stardust-Celeste.git
