--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,11 @@ endif()
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 file(GLOB_RECURSE INC_FILES src/*.hpp)
 
-add_executable(CC-Classic ${SRC_FILES} ${INC_FILES})
+add_executable(Indev-CCR ${SRC_FILES} ${INC_FILES})
 add_subdirectory(ext/SDC Stardust)
 add_subdirectory(Core CC-Core)
-target_include_directories(CC-Classic PRIVATE src Core/include)
+target_include_directories(Indev-CCR PRIVATE src Core/include)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-implicit-function-declaration")
-target_compile_options(CC-Classic PRIVATE -Wall)
-target_link_libraries(CC-Classic PRIVATE Stardust-Celeste SC-Entry CC-Core)
+target_compile_options(Indev-CCR PRIVATE -Wall)
+target_link_libraries(Indev-CCR PRIVATE Stardust-Celeste SC-Entry CC-Core)
