Update to MathFu -- Fix Items

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,13 @@ file(GLOB_RECURSE INC_FILES src/*.hpp)
 add_executable(Indev-CCR ${SRC_FILES} ${INC_FILES})
 add_subdirectory(ext/SDC Stardust)
 add_subdirectory(Core CC-Core)
-target_include_directories(Indev-CCR PRIVATE src Core/include)
+add_compile_definitions(MATHFU_COMPILE_WITHOUT_SIMD_SUPPORT)
+target_include_directories(Indev-CCR PRIVATE src Core/include ext/SDC/ext/mathfu/include)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-implicit-function-declaration")
 target_compile_options(Indev-CCR PRIVATE -Wall)
 target_link_libraries(Indev-CCR PRIVATE Stardust-Celeste SC-Entry CC-Core)
+
+set(mathfu_enable_simd OFF)
+set(mathfu_build_tests OFF)
+set(mathfu_build_benchmarks OFF)
