--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-implicit-function-declaration")
 target_compile_options(Indev-CCR PRIVATE -Wall)
 target_link_libraries(Indev-CCR PRIVATE Stardust-Celeste SC-Entry CC-Core)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
+
 set(mathfu_enable_simd OFF)
 set(mathfu_build_tests OFF)
 set(mathfu_build_benchmarks OFF)
