--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "resourcepacks"]
 	path = resourcepacks
 	url = https://github.com/CrossCraft/CrossCraft-Resources.git
+[submodule "Core"]
+	path = Core
+	url = git@github.com:CrossCraft/CC-Core.git
